[package]
name = "donut-rs"
version = "0.1.0"
edition = "2021"
authors = ["wrott <wrottkitkatkatt@gmail.com>"]
license = "MIT"
description = "Just another donut written in Rust."
readme = "README.md"
repository = "https://github.com/wrott/donut-rs.git"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
libc = "*"